# industrial_pcl_experimental

./: README.md  stack.xml
industrial_filters/: CMakeLists.txt  manifest.xml  nodelet_plugins.xml
industrial_filters/include/: concantenate_mls.h  concantenate_mls_nodelet.h  concatenate_mls.h  concatenate_mls_nodelet.h
industrial_filters/launch/: test_node.launch
industrial_filters/src/: concantenate_mls.cpp  concantenate_mls_nodelet.cpp  concatenate_mls.cpp  concatenate_mls_nodelet.cpp
industrial_filters/src/nodes/: concatenate_mls_test.cpp
industrial_object_recognition_pcl17/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml  package.xml  readme
industrial_object_recognition_pcl17/launch/: camera.launch  data_proc.launch  rec_serv.launch  recognition.launch  training.launch
industrial_object_recognition_pcl17/src/: generate_training_data.cpp  process_faro_data.cpp  recognition_node.cpp  recognition_service.cpp
industrial_pcl/: CMakeLists.txt  package.xml
industrial_pcl_filters/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml
industrial_pcl_filters/cfg/: ConcatenateMLS.cfg
industrial_pcl_filters/include/: concatenate_mls.h  concatenate_mls_nodelet.h
industrial_pcl_filters/include/industrial_pcl_filters/: concatenate_mls.h
industrial_pcl_filters/launch/: tabletop_segmentation.launch  test_node.launch  test_nodelet.launch
industrial_pcl_filters/src/: concatenate_mls.cpp  concatenate_mls_nodelet.cpp
industrial_pcl_filters/src/nodes/: concatenate_mls_test.cpp
pump_vision/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pump_vision/launch/: prosilica.launch
pump_vision/src/: pump_pose_detection.cpp
