<package>
  <name>industrial_pcl</name>
  <version>1.0.0</version>
  <description> ROS-Industrial industrial_pcl metapackage contains perception/pcl code for supporting industrial systems</description>
  <maintainer email="cgomez@swri.org">Christina Gomez</maintainer>
  <author email="cgomez@swri.org">Christina Gomez (Southwest Research Institute)</author>
  <license>BSD</license>  
  <url>http://ros.org/wiki/industrial_pcl</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend> common </run_depend> <!-- actionlib -->
  <run_depend> common_msgs </run_depend> <!-- actionlib_msgs, trajectory_msgs, sensor_msgs -->

  <run_depend> ros </run_depend>
  <run_depend> ros_comm </run_depend> <!-- std_msgs, rospy, roscpp -->

  <export>
    <metapackage/>
  </export>

</package>
