<package>
  <name>industrial_pcl_filters</name>
  <version>1.0.0</version>
  <description>

     industrial_pcl_filters employs methods within the Point Cloud Library in custom filters for industrial applications

  </description>
  <maintainer email="cgomez@swri.org">Christina Gomez (Southwest Research Institute)</maintainer>
  <author>Christina Gomez</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/industrial_pcl_filters</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl</build_depend> 
  <build_depend>pcl_ros</build_depend>
  <build_depend>nodelet</build_depend>
<!--  <build_depend>tabletop_object_detector</build_depend> -->
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>dynamic_reconfigure</build_depend> 
  <build_depend> sensor_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl</run_depend> 
  <run_depend>pcl_ros</run_depend>
  <run_depend>nodelet</run_depend>
<!--  <run_depend>tabletop_object_detector</run_depend> -->
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>dynamic_reconfigure</run_depend> 
  <run_depend> sensor_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>


