<package>
  <name>pump_vision</name>
  <version>1.0.0</version>
  <description>

     pump_vision

  </description>
  <maintainer email="twhitney@swri.org">Thomas G. Whitney III</maintainer>
  <author>Thomas G. Whitney III</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/pump_vision</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend> std_msgs</build_depend>
  <build_depend> roscpp</build_depend>
  <build_depend> OpenCV</build_depend>
  <build_depend> image_transport</build_depend>
  <build_depend> cv_bridge</build_depend>
  <build_depend> sensor_msgs</build_depend>
 <!--  <build_depend> mantis_perception</build_depend> -->

  <run_depend> std_msgs</run_depend>
  <run_depend> roscpp</run_depend>
  <run_depend> OpenCV</run_depend>
  <run_depend> image_transport</run_depend>
  <run_depend> cv_bridge</run_depend>
  <run_depend> sensor_msgs</run_depend>
 <!--  <run_depend> mantis_perception</run_depend> -->

</package>
